test/syntax/fail/not_combinatorial/let_fby.sync
let y = true fby true
